[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/MainScenes/BattleManager.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UIScenes/BattleHUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/MainScenes/BattleArea.tscn" type="PackedScene" id=4]

[node name="BattleScene" type="Node"]
script = ExtResource( 2 )

[node name="BattleArea" parent="." instance=ExtResource( 4 )]
ROW = 7
COL = 7

[node name="BattleHUD" parent="." instance=ExtResource( 3 )]
ROW = 7
COL = 7

[node name="MoveConfirmTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="MoveConfirmTimer" to="." method="_on_MoveConfirmTimer_timeout"]

[editable path="BattleArea"]
[editable path="BattleHUD"]
